--- a/SocketIOServer/public/index.css
+++ b/SocketIOServer/public/index.css
@@ -6,7 +6,30 @@ body {
     flex-wrap: wrap;
 }
 
+#container {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100vw;
+}
+
 #logo {
     height: 200px;
     margin-bottom: 40px;
+}
+
+#rightHearts {
+    height: 200px;
+    position: absolute;
+    right: 50px;
+    top: 50px;
+}
+
+#leftHearts {
+    height: 200px;
+    transform: scaleX(-1);
+    position: absolute;
+    left: 50px;
+    bottom: 50px;
 }
