--- a/SocketIOServer/public/shared.css
+++ b/SocketIOServer/public/shared.css
@@ -8,6 +8,19 @@ body {
     font-style: normal;
 }
 
+h1 {
+    font-size: 96px;
+    font-weight: 800;
+    color: #D6202A;
+    margin: 0;
+}
+
+h3 {
+    font-size: 36px;
+    font-weight: 500;
+    margin: 0;
+}
+
 button {
     font-family: "Prompt", sans-serif;
     font-weight: 400;
