Move all styling to CSS file

--- a/SocketIOServer/public/lobbyCode/index.css
+++ b/SocketIOServer/public/lobbyCode/index.css
@@ -7,6 +7,13 @@
     padding-top: 10px;
 }
 
+#codeGroup {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    gap: 20px;
+}
+
 .code {
     font-family: "Anta", sans-serif;
     font-weight: 400;
