--- a/SocketIOServer/public/shared.css
+++ b/SocketIOServer/public/shared.css
@@ -24,12 +24,19 @@ h3 {
     margin: 0;
 }
 
+h4 {
+    font-size: 28px;
+    font-weight: 400;
+    margin: 0;
+}
+
 p {
     letter-spacing: 1px;
     line-height: 1.6;
-    font-size: 25px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 300;
     color: #000000;
+    margin: 0;
 }
 
 
