--- a/SocketIOServer/public/prompt/prompt.css
+++ b/SocketIOServer/public/prompt/prompt.css
@@ -68,7 +68,7 @@
     background: #D6202A;
     border-radius: 20px;
     animation: timerBar linear forwards;
-    animation-duration: 60s; /* change based on timer amount */
+    animation-Duration: 61s; 
     transform-origin: left center;
 }
 
