--- a/SocketIOServer/public/waitingGraph/waitingGraph.css
+++ b/SocketIOServer/public/waitingGraph/waitingGraph.css
@@ -29,3 +29,10 @@ img {
 .jump {
     animation: jump 0.6s ease forwards;
 }
+
+@media (max-width: 425px) or (max-height: 425px) {
+    img {
+        width: 60px;
+        height: 60px;
+    }
+}
