--- a/SocketIOServer/public/lobby/lobby.css
+++ b/SocketIOServer/public/lobby/lobby.css
@@ -1,14 +1,19 @@
 #container {
-    padding-top: 80px;
-    width: 100vw;
+    /*width: 100vw;*/
     height: 100vh;
+    overflow: hidden;
+}
+
+#container h1{
+    margin-top: 80px;
+    margin-bottom: 32px;
 }
 
 #scrollContainer {
     overflow: hidden;
     position: relative;
     width: 50%;
-    height: 100vh;
+    height: 100%;
     margin: auto;
 }
 
@@ -17,7 +22,7 @@
     width: 100%;
     height: 100%;
     top: 100%;
-    animation: 15s scrollContainer 0s linear infinite;
+    animation: 30s scrollContainer 0s linear infinite;
 }
 
 @keyframes scrollContainer {
@@ -35,11 +40,12 @@
 
 .playerCard {
     display: block;
-    float: left;  /* to have the player card be left aligned, set float: left; clear: left; */
+    float: left;  /* to have the player card be left aligned, set float: left; clear: right; */
     clear: left;
     border: 5px solid #D6202A;
     border-radius: 36px;
     width: fit-content;
+    height: fit-content;
     text-align: center;
     margin: 10px 0;
 }
@@ -51,4 +57,50 @@
     border-bottom: 2px solid #D6202A;
     border-top-left-radius: 36px;
     border-top-right-radius: 36px;
+}
+
+@media (max-width: 425px) or (max-height: 425px) {
+    #scrollContainer {
+        width: 80%;
+    }
+    .playerCard {
+        border-width: 2px;
+        border-radius: 18px;
+    }
+    .userImage {
+        width: 100px;
+        height: 100px;
+        border-top-left-radius: 18px;
+        border-top-right-radius: 18px;
+    }
+}
+
+@media (max-height: 425px) {
+    #scrollContainer {
+        overflow: hidden;
+        position: relative;
+        width: 100%;
+        height: 50%;
+        margin: auto;
+    }
+
+    #players {
+        display: flex;
+        flex-direction: row;
+        gap: 60px;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        animation: 30s scrollContainer 0s linear infinite;
+    }
+
+    @keyframes scrollContainer {
+        from {
+            left: 100%;
+        }
+        to {
+            left: -300%;
+        }
+    }
 }
