--- a/SocketIOServer/public/profileCreation/profile_creation.css
+++ b/SocketIOServer/public/profileCreation/profile_creation.css
@@ -21,7 +21,12 @@ input:focus {
 }
 
 #outerContainer {
-    padding-top: 80px;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: -30px;
 }
 
 #container {
@@ -29,6 +34,7 @@ input:focus {
     justify-content: center;
     flex-direction: row;
     gap: 100px;
+    flex-wrap: wrap;
 }
 
 #profileForm {
@@ -40,6 +46,8 @@ input:focus {
 #imageContainer {
     position: relative;
     border: 5px solid #D6202A;
+    width: 400px;
+    height: 300px;
 }
 
 #imageContainer:hover #buttons {
@@ -52,12 +60,21 @@ input:focus {
     opacity: 0.3;
 }
 
+#image {
+    width: 100%;
+    height: 100%;
+}
+
 #buttons {
     display: none;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+#buttons img {
+    width: 68px;
 }
 
 #uploadLabel:hover img{
@@ -112,4 +129,37 @@ input:focus {
     position: absolute;
     bottom: 20px;
     right: 40px;
+}
+
+@media (max-width: 425px) or (max-height: 425px) {
+    #container {
+        gap: 30px;
+    }
+    #imageContainer {
+        width: 200px;
+        height: 150px;
+    }
+    #imageContainer:hover #buttons {
+        gap: 8px;
+    }
+    #buttons img{
+        width: 52px;
+    }
+    #profileForm form input{
+        width: 250px;
+        height: 50px;
+    }
+    label {
+        font-size: 20px;
+    }
+    input {
+        font-size: 20px;
+        padding: 5px;
+        border-width: 2px;
+        border-radius: 18px;
+    }
+    #next {
+        bottom: 20px;
+        right: 30px;
+    }
 }
