--- a/SocketIOServer/public/shared.css
+++ b/SocketIOServer/public/shared.css
@@ -54,3 +54,18 @@ button:hover {
     cursor: pointer;
     transform: scale(1.2);
 }
+
+@media (max-width: 425px) or (max-height: 425px) {
+    h1 {
+        font-size: 40px;
+    }
+    h3 {
+        font-size: 16px;
+    }
+    h4 {
+        font-size: 14px;
+    }
+    button {
+        font-size: 1em;
+    }
+}
