Added autocap for lobby code and name

--- a/SocketIOServer/public/lobbyCode/index.css
+++ b/SocketIOServer/public/lobbyCode/index.css
@@ -24,6 +24,7 @@
     font-weight: 400;
     font-style: normal;
     font-size: 128px;
+    text-transform: uppercase;
     text-align: center;
     height: 220px;
     width: 152px;
