Add menu to all pages
Added a settings menu that could be opened by clicking the logo at the top right hand corner. The menu gives the user the options to join a new game and to go back to the home screen. Styling for the menu is located in ```shared.css``` and the functionality is in ```menu.js```. Styling was also adjusted to ensure that it displays correctly on mobile.

--- a/SocketIOServer/public/index.css
+++ b/SocketIOServer/public/index.css
@@ -6,6 +6,10 @@ body {
     flex-wrap: wrap;
 }
 
+button {
+    margin: 0 auto;
+}
+
 #container {
     display: flex;
     justify-content: space-evenly;
@@ -43,11 +47,11 @@ img {
         margin-bottom: 10px;
     }
     #rightHearts {
-        right: 5px;
-        top: 5px;
+        right: 20px;
+        top: 200px;
     }
     #leftHearts {
-        left: 5px;
-        bottom: 5px;
+        left: 20px;
+        bottom: 200px;
     }
 }
