--- a/SocketIOServer/public/countdown/countdown.css
+++ b/SocketIOServer/public/countdown/countdown.css
@@ -1,9 +1,6 @@
-body {
-    padding: 20px;
-}
 #container {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-content: center;
