--- a/SocketIOServer/public/voting/voting.css
+++ b/SocketIOServer/public/voting/voting.css
@@ -20,7 +20,7 @@ h1 {
     border-radius: 36px;
     padding: 20px;
 }
-.votingButton:hover {
+.votingButton:hover:enabled {
     transform: scale(1.1);
 }
 #submit {
