Add styling for error messages
Added styling for error messages on profile creation page and lobby code page.

--- a/SocketIOServer/public/profileCreation/profile_creation.css
+++ b/SocketIOServer/public/profileCreation/profile_creation.css
@@ -125,6 +125,16 @@ input:focus {
     cursor: pointer;
 }
 
+#errorMessage {
+    display: block;
+    width: fit-content;
+    color: #D6202A;
+    font-weight: 400;
+    text-transform: uppercase;
+    padding: 10px;
+    margin: 0 auto;
+}
+
 #continueButton {
     position: absolute;
     bottom: 20px;
