--- a/SocketIOServer/public/shared.css
+++ b/SocketIOServer/public/shared.css
@@ -113,6 +113,9 @@ button:hover:enabled {
     h4 {
         font-size: 14px;
     }
+    p {
+        font-size: 12px;
+    }
     button {
         font-size: 1em;
     }
