--- a/SocketIOServer/public/countdown/countdown.css
+++ b/SocketIOServer/public/countdown/countdown.css
@@ -1,4 +1,10 @@
-#container {
+/*
+ *  AUTHOR: Amanda (ruana2@rpi.edu)
+ *  DESC: Styling for the Countdown page.
+ */
+
+#container
+{
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -7,20 +13,30 @@
     align-items: flex-end;
     flex-wrap: wrap;
 }
-img {
+
+img
+{
     width: 30px;
     height: 30px;
     object-fit: cover;
     padding: 0 10px;
 }
 
-@media (max-width: 500px) or (max-height: 500px) {
-    img {
+#number
+{
+    line-height: 0.7;
+}
+
+@media (max-width: 500px) or (max-height: 500px)
+{
+    img
+    {
         width: 20px;
         height: 20px;
         padding: 0 6px;
     }
-    h1 {
+    h1
+    {
         font-size: 55px;
     }
 }
