--- a/SocketIOServer/public/index.css
+++ b/SocketIOServer/public/index.css
@@ -1,4 +1,8 @@
-body {
+/* AUTHOR: Amanda (ruana2@rpi.edu) */
+/* DESC: Styling for the Home page. */
+
+body
+{
     text-align: center;
     display: flex;
     justify-content: center;
@@ -6,11 +10,13 @@ body {
     flex-wrap: wrap;
 }
 
-button {
+button
+{
     margin: 0 auto;
 }
 
-#container {
+#container
+{
     display: flex;
     justify-content: space-evenly;
     align-content: space-evenly;
@@ -18,39 +24,51 @@ button {
     width: 100vw;
 }
 
-img {
+img
+{
     height: 200px;
 }
 
-#logo {
+#logo
+{
     margin-bottom: 40px;
 }
 
-#rightHearts {
+#rightHearts
+{
     position: absolute;
     right: 50px;
     top: 50px;
 }
 
-#leftHearts {
+#leftHearts
+{
     transform: scaleX(-1);
     position: absolute;
     left: 50px;
     bottom: 50px;
 }
 
-@media (max-width: 500px) or (max-height: 500px) {
-    img {
+@media (max-width: 500px) or (max-height: 500px)
+{
+    img
+    {
         height: 100px;
     }
-    #logo {
+
+    #logo
+    {
         margin-bottom: 10px;
     }
-    #rightHearts {
+
+    #rightHearts
+    {
         right: 20px;
         top: 200px;
     }
-    #leftHearts {
+
+    #leftHearts
+    {
         left: 20px;
         bottom: 200px;
     }
