--- a/SocketIOServer/public/lobby/lobby.css
+++ b/SocketIOServer/public/lobby/lobby.css
@@ -1,14 +1,22 @@
-#container {
+/*
+ *  AUTHOR: Amanda (ruana2@rpi.edu)
+ *  DESC: Styling for the Lobby page.
+ */
+
+#container
+{
     height: 100vh;
     overflow: hidden;
 }
 
-#container h1{
+#container h1
+{
     margin-top: 80px;
     margin-bottom: 32px;
 }
 
-#scrollContainer {
+#scrollContainer
+{
     overflow: hidden;
     position: relative;
     width: 50%;
@@ -16,7 +24,8 @@
     margin: auto;
 }
 
-#players {
+#players
+{
     position: absolute;
     width: 100%;
     height: 100%;
@@ -24,7 +33,8 @@
     animation: 30s scrollContainer 0s linear infinite;
 }
 
-@keyframes scrollContainer {
+@keyframes scrollContainer
+{
     from {
         top: 100%;
     }
@@ -33,7 +43,8 @@
     }
 }
 
-.playerCard {
+.playerCard
+{
     display: block;
     float: left;  /* to have the player card be left aligned, set float: left; clear: right; */
     clear: right;
@@ -45,7 +56,8 @@
     margin: 10px 0;
 }
 
-.userImage{
+.userImage
+{
     width: 200px;
     height: 200px;
     object-fit: cover;
@@ -54,15 +66,19 @@
     border-top-right-radius: 30px;
 }
 
-@media (max-width: 500px) or (max-height: 500px) {
-    #scrollContainer {
+@media (max-width: 500px) or (max-height: 500px)
+{
+    #scrollContainer
+    {
         width: 80%;
     }
-    .playerCard {
+    .playerCard
+    {
         border-width: 2px;
         border-radius: 18px;
     }
-    .userImage {
+    .userImage
+    {
         width: 100px;
         height: 100px;
         border-top-left-radius: 16px;
@@ -70,8 +86,10 @@
     }
 }
 
-@media (max-height: 500px) {
-    #scrollContainer {
+@media (max-height: 500px)
+{
+    #scrollContainer
+    {
         overflow: hidden;
         position: relative;
         width: 100%;
@@ -79,7 +97,8 @@
         margin: auto;
     }
 
-    #players {
+    #players
+    {
         display: flex;
         flex-direction: row;
         gap: 60px;
@@ -90,11 +109,14 @@
         animation: 30s scrollContainer 0s linear infinite;
     }
 
-    @keyframes scrollContainer {
-        from {
+    @keyframes scrollContainer
+    {
+        from
+        {
             left: 100%;
         }
-        to {
+        to
+        {
             left: -300%;
         }
     }
