--- a/SocketIOServer/public/profileCreation/profile_creation.css
+++ b/SocketIOServer/public/profileCreation/profile_creation.css
@@ -1,4 +1,8 @@
-label {
+/* AUTHOR: Amanda (ruana2@rpi.edu) */
+/* DESC: Styling for the Profile Creation page. */
+
+label
+{
     letter-spacing: 1px;
     line-height: 1.6;
     font-size: 36px;
@@ -6,7 +10,8 @@ label {
     color: #000000;
 }
 
-input {
+input
+{
     font-family: "Anta", sans-serif;
     border: 5px solid #D6202A;
     background-color: transparent;
@@ -16,11 +21,13 @@ input {
     text-align: center;
 }
 
-input:focus {
+input:focus
+{
     background-color: #ffb9c1;
 }
 
-#container {
+#container
+{
     display: flex;
     height: 100vh;
     justify-content: center;
@@ -29,7 +36,8 @@ input:focus {
     margin-top: -30px;
 }
 
-#innerContainer {
+#innerContainer
+{
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -37,35 +45,41 @@ input:focus {
     flex-wrap: wrap;
 }
 
-#profileForm {
+#profileForm
+{
     display: flex;
     align-content: center;
     flex-wrap: wrap;
 }
 
-#imageContainer {
+#imageContainer
+{
     position: relative;
     border: 5px solid #D6202A;
     width: 400px;
     height: 300px;
 }
 
-#imageContainer:hover #buttons {
+#imageContainer:hover #buttons
+{
     display: flex;
     flex-direction: row;
     gap: 20px;
 }
 
-#imageContainer:hover #image {
+#imageContainer:hover #image
+{
     opacity: 0.3;
 }
 
-#image {
+#image
+{
     width: 100%;
     height: 100%;
 }
 
-#buttons {
+#buttons
+{
     display: none;
     position: absolute;
     top: 50%;
@@ -73,22 +87,26 @@ input:focus {
     transform: translate(-50%, -50%);
 }
 
-#buttons img {
+#buttons img
+{
     width: 68px;
 }
 
-#uploadLabel:hover img{
+#uploadLabel:hover img
+{
     cursor: pointer;
     transform: scale(1.2);
 }
 
-#next {
+#next
+{
     position: absolute;
     bottom: 50px;
     right: 80px;
 }
 
-#modal {
+#modal
+{
     display: none;
     position: fixed;
     z-index: 1;
@@ -100,7 +118,8 @@ input:focus {
     background-color: rgb(0,0,0,0.4); /* Fallback color */
 }
 
-#modal-content {
+#modal-content
+{
     position: relative;
     background-color: #FFF5F5;
     margin: 15% auto;
@@ -108,7 +127,8 @@ input:focus {
     width: 60%;
 }
 
-#close {
+#close
+{
     color: #aaa;
     position: absolute;
     top: 20px;
@@ -119,13 +139,15 @@ input:focus {
 }
 
 #close:hover,
-#close:focus {
+#close:focus
+{
     color: black;
     text-decoration: none;
     cursor: pointer;
 }
 
-#errorMessage {
+#errorMessage
+{
     display: block;
     width: fit-content;
     color: #D6202A;
@@ -135,40 +157,50 @@ input:focus {
     margin: 0 auto;
 }
 
-#continueButton {
+#continueButton
+{
     position: absolute;
     bottom: 20px;
     right: 40px;
 }
 
-@media (max-width: 500px) or (max-height: 500px) {
-    #innerContainer {
+@media (max-width: 500px) or (max-height: 500px)
+{
+    #innerContainer
+    {
         gap: 30px;
     }
-    #imageContainer {
+    #imageContainer
+    {
         width: 200px;
         height: 150px;
     }
-    #imageContainer:hover #buttons {
+    #imageContainer:hover #buttons
+    {
         gap: 8px;
     }
-    #buttons img{
+    #buttons img
+    {
         width: 52px;
     }
-    #profileForm form input{
+    #profileForm form input
+    {
         width: 250px;
         height: 50px;
     }
-    label {
+    label
+    {
         font-size: 20px;
     }
-    input {
+    input
+    {
         font-size: 20px;
         padding: 5px;
         border-width: 2px;
         border-radius: 18px;
     }
-    #next {
+    #next
+    {
         bottom: 20px;
         right: 30px;
     }
